--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+test/test-app/db/*.sqlite3
+test/test-app/db/*.sqlite3-journal
+test/test-app/log/*.log
+test/test-app/tmp/
+test/test-app/.sass-cache
